--- a/index.html
+++ b/index.html
@@ -585,10 +585,315 @@
       </div>
     </details>
 
+    <!-- ------------------------------------ WEEK 4 ---------------------------------------------- -->
+
+    <details class="week" id="week-4">
+      <summary>Week 4</summary>
+      <div class="week-content">
+        <h3>Reflection</h3>
+        <p>
+          This weeks lesson was about giving feedback to your peers about
+          Assignment 2.2. Since once again I am away, I've decided to ask the
+          people around me for feedback! Thankfully this is the last lesson I am
+          away since next week there's no classes! The advice I got last week
+          was actually extremely helpful in learning on what other people
+          typically hear in a consumer standpoint, it helped me inform my
+          decisions for this project.
+          <br />
+          <br />
+          The main critique I had for my sound design was about the foley that I
+          used for the cube-builing sequences and that it didn't feel as
+          convincing as it could have been. They mentioned that it felt too
+          clean and didn't match too much with the visuals. I realized that this
+          probably happened because I relied too much on just the one sound
+          layer, instead of using multiple diffrent textures. I usually do like
+          to stack a bunch of effects and layers to achieve a sound, so I'm not
+          sure why I decided not to do it here! Maybe because I was too focused
+          in matching the clean visuals, and the fact I tried to impose a
+          challenge on myself in using minimal layers. I think doing this lost a
+          lot of weight into the sound that could have made the foley more
+          believable. But now, I can actively use more layers on my next project
+          (sourcing a variety of different sounds) and then layering them to
+          create more depth and realism!
+          <br />
+          <br />
+          The other criticism I received was that the atmosphere wasn't as
+          immersive as my previous project. Even though there was that challenge
+          of the minimal layers, I do think the atmospheric sounds and ambience
+          was a bit low, and you could barely hear it once the layers started to
+          build up. I definitely spent more time building layers and acheiving
+          depth compared to this work, which is probably why they felt there was
+          a lack of atmosphere in this project. Next time, I would like to be
+          more intentional about the spatial audio, and making sure the
+          environment feels alive before I start working on the diegetic sound!
+          <br />
+          <br />
+          However, the consensus was that the slow motion sections felt great,
+          they could feel that it was meant to be slow motion. It felt natural
+          and well-timed, and they particularly liked how all the aspects felt
+          like they were slowing dowm, and helped reinforce the visuals. I put a
+          lot of focus into getting the feeling of slow motion down, and getting
+          all the automation to match up to the visuals and all the sound, so I
+          was very glad and happy to receive that feedback! Very encouraging.
+          The changes between different motion speeds flowed in a way that kept
+          the pacing smooth, which tells me that my use of automation has gotten
+          much better! I'd like to experiment a bit more on the gradual blends
+          and transitional elements to really nail it for my future projects!
+          <br />
+          <br />
+          Overall this feedback made me realize I tend to prioritize certain
+          aspects and because of that, potentially can overlook others. I'm
+          happy with the parts I spent a lot of time on, but I know I really
+          need to push my foley design and environmental layering if I want to
+          improve my design further!
+        </p>
+        <h3>Academic Research</h3>
+        <p>
+          This week I researched a lot on how to create horror ambiences, and
+          what can cause viewers to be scared just through audio alone, as well
+          as how audio can enhance visuals and imply something is there to keep
+          viewers on the edge of their seat
+          <br />
+          <br />
+          Blumstein, Davitan and Kaye discuss how harsh, non-linear sounds can
+          trigger instinctive threat responses in their article, 'Do film
+          soundtracks contain nonlinear analogues to influence emotion?'. This
+          can be sudden distortion, bursts of noise, unpredicatable modulation,
+          etc. because they can resemble animal distress calls. I could use this
+          idea by adding these short bursts of sound and effects at moments
+          where I want to create sudden tension. Using this technique would give
+          me a more natural way to make an audience feel unsettled without
+          solely relying on visuals jumpscares.
+          <br />
+          <br />
+          Another interesting article I read was by Menninghaus 'The
+          Distancing-EMbracing model of the enjoyment of negative emotions in
+          art reception'. It looks about how inharmonic or detuned sounds create
+          a sense of unease because it disrputs the harmonic balance that we
+          expect. This would be interesting to apply into my horror/triller
+          ambiences that I am creating by layering slightly out of tuen drones
+          or pads underneath other layers to make a sense of unease in my
+          projects. It would let a scene feel tense even if nothing dramatic is
+          happening visually, which is important for horror ambiences.
+          <br />
+          <br />
+          A lot of the research I do on ambiences and music typically involve
+          sound and making it. But I think this book by ZhouI read is
+          particilarly interesting ebcause it talks about the absence of sound
+          and its effects ('Effects of silence on emotion response to sound').
+          He explains how silence and sudden changes in dynamic can actually
+          heighten emotional impact and reactons to sound. I think I can use
+          this in my own projects by adding short, deliberate pauses before a
+          loud or important sound effect , which can bring attention to it and
+          heighten its impact. It would make those moments stand out more,
+          especially in suspenseful scenes.
+        </p>
+        <h3>Artistic Research</h3>
+        <p>
+          Because I've been so focused on horror this week, I went back to the
+          Silent Hill series, a famous horror game known for its creepy
+          atmosphere. Akira Yamaoka was the sound designer for the franchise,
+          and he tends to blend industrial noise, detuned instruments and
+          minimal melodic elements to create spaces that feel haunting. Since
+          Silent Hill is a game, he uses looping textures that evolve slowly,
+          making the player feel trapped in the emotional state he creates. I
+          could use this technique in my future projects, and even the
+          animations I am involved in this semester by creating subtle
+          variations between each scene to sustain tension in scenes where not a
+          lot of dramatic events happen. However this would be especially useful
+          in long sequences where the user explores a space and they tend to get
+          lost and immersed, that they forget about the sound.
+          <br />
+          <br />
+          Another game that is pretty famous for its horror sound design is
+          Resivent Evil. Shusaku Uchiyama relies heavily on lower drowns, tight
+          reverb and metallic sounds to manipulate the players feeling of space,
+          making them often feel ecnlosed and claustrophobic. I love this game
+          series and I genuinely feel scared while playing the game, especially
+          being hyper aware of my surroundings and getting scared over things
+          that wouldn't scare me usually. I feel like I could adapt this into my
+          own work by shaping the reverb and adding lower frequencies to make
+          the space feel smaller and constricted, to try and make the viewers
+          feel the same as I do when I play Resident Evil. I think using sharp
+          high pitched stingers can also make the listener snap and pay
+          attention to key moments if I use them alongside the low drones.
+          <br />
+          <br />
+          Other than games, I also found this sound designer and composer called
+          Lustmord, who specializes in making ambient music that feature low
+          drones, reverb and little high frequency details. This skewed
+          frequency spectrum can evoke a sense of oppressive vast emptiness. His
+          music is kind of minimalist, which proves that horror sound design
+          doesn't need to be super busy or full of layers to be effective, it
+          comes from scale and patience and building (which I could probably use
+          in my projects as I tend to just stack layers and hope it works). I
+          could use his philopsophy to try to strip back my soundscapes and
+          focus on depth and detail in a few elements to make the atmosphere
+        </p>
+        <h3>Technical Research</h3>
+        <p>
+          This week I watched
+          <a href="https://www.youtube.com/watch?v=U7wkq_s2t4M"
+            >How to Design Dark and Scary Sounds</a
+          >
+          which went through a bunch of techniques on, well, how to design dark
+          and scary sounds! It went through backmasking, backwards reverb,
+          backwards talk, the importance of slowing things down and combining
+          all of these. I liked this tutorial because it shows how different you
+          can make sounds just by transforming existing recordings using effects
+          and such, rather than trying to make a purely scary sound.
+          Experimenting with my own sounds and seeing what I can create with
+          them is an important part of sound design and I want to try
+          experimenting with this in the projects this semester! I think it'd be
+          cool to have backwards talk for an easter egg in one of the
+          animations.
+          <br />
+          <br />
+          I also watched
+          <a href="https://www.youtube.com/watch?v=8QlWUGtB_9w"
+            >How to Sound Design Horror Atmospheres using Vital</a
+          >
+          which was basically a deep dive into building horror ambiences from
+          the very beginning. It also was kind of a tutorial on how to use Vital
+          as I am still not 100% comfortable using it. Anyways, it went step by
+          step on how to set up the oscillators and effects and adding pitch
+          modulation and movement. It also went through a bit of basic music
+          theory, specifically using minor seconds to create dissonance and also
+          showed how to create intros, risers and just evolving atmospheres in
+          general. This was super helpful because it explained what to do, but
+          also why were doing each step so I could make my own atmospheres using
+          the same basics. Even though it was specific to Vital, I can
+          definitely use this information in other synths or plugins!
+        </p>
+        <h3>Progress Report</h3>
+        <p>
+          This week was when I was the most busy overseas, so I didn't get to
+          work as much on my projects as other weeks(which is why a lot of my
+          assignments were done super early if you noticed!), but I still tried
+          to do a few.
+          <br />
+          <br />
+          I mainly tried to work on things that I could do without external
+          equipment (as I usually use a MIDI keyboard, and I don't have access
+          to a professional recorder). I worked on the song I will use for the
+          music video (although plans have changed and I'm not sure if my
+          videographer has time, so I might do a lighting show alongside my
+          song) and fixed up a bit of the drums. I used the free kits in the
+          Steven Slate Drum's pack and it sounds way better than the default in
+          Ableton. Though some of the snares were a bit off so I had to go in
+          and manually change the different MIDI notes which was a bit tedious,
+          but I am very happy with how it sounds so far. I also used Shreddage
+          to add a bit of bass and other guitar parts that I would like to try
+          once I'm back at home with my instruments. I also started to
+          experiment with lyrics (this is what I was dreading) and melody, but
+          haven't found anything that particularly stuck to me.
+          <br />
+          <br />
+          <img src="photos/week4/1.png" alt="" />
+          I did the same with some piano synths to create a kind of wall of
+          sound. I used the video mentioned in the technical research to really
+          help me with the order of effects and such. I'm very excited to work
+          on this with real instruments (especially real drums!)
+          <br />
+          <br />
+          This week had a lot of focusing on planning the semester, especially
+          how I will organize my time once I am back.
+          <br />
+          <br />
+          I had a call with Tara, the animator of alskdn, as well as Maria (a
+          sound designer from our class), as we are both working on this project
+          together. We just talked about what her vision is for the sound
+          design, and what we could achieve based on that. She was very
+          understanding and very helpful, gave us a timeline of when things will
+          be done, what she expected of each scene, but also trusts us and gave
+          us a lot of room to be creative and do what we want to make the sound
+          match the visuals. It's hard to work on specific sounds as the
+          animatic isn't confirmed 100% yet and is still subject to change, but
+          she said she will be done soon so we can start as soon as possible!
+          She also put us in contact with the voice actors, so we are able to
+          communicate directly in case certain sounds need to be rerecorded, I
+          am happy to be working with someone who is on top of everything and is
+          thinking ahead!
+          <br />
+          <br />
+          The other animation, 'The Reconnect', that I am also working on, I
+          also had a proper chat with animator on what she wanted the sound
+          design to achieve. She was more loose with the descriptions, and
+          instead wrote more about what she wants each scene to feel like. I
+          think this will be good experience on creating my own visions based on
+          client's requirements on the atmosphere and end product, while the
+          other project will be good experience on achieving balance betweenthe
+          specifics of what the client wants for each scene, versus what I
+          believe as a sound designer. I am very grateful to both for being very
+          flexible and understanding, while also giving guidance, I am very
+          excited to be working with them! At the time of writing this, she
+          actually reached out to me saying the first 10 seconds of the
+          animation is fully complete so I will be working on that next week!
+          <br />
+          <br />
+          Because both of these animations are very horror, thriller and tension
+          based, I started to resarch a lot with creating ambiences, since I can
+          use these as layering materials for any of these projects (and even
+          future ones!). What I learnt can be seen in the technical research
+          section! This was my favorite part as I was able to create a lot of
+          audio clips that I can use in the projects, maybe with a bit of
+          editing to fit the actual scene, but overall I am very happy with the
+          progress. I have a lot to work on once I am back next week!
+          <br />
+          <br />
+          I also had a call with the game developers of 'Fired Before Hired' and
+          what sound design and foley they expected of me. This project is
+          heavily reliant on realistic sounds, like whooshing of swords,
+          furniture being broken and torn, etc. so I really get to work on my
+          audio recording skills (which honestly need a lot of work...!). I am
+          nervous to record, but also excited because I know its a skill that is
+          necessary and would like to get better at. I was also asked to make
+          the menu music, and kind of like office/elevator music. They said they
+          weren't sure of what kind of vibe or genre they are going for, so they
+          want me to make a small snippet of different ones, like 8bit,
+          electronic, real instruments, etc. This makes it kind of difficult,
+          but hopefully I can only make a 5-10 second clip so they know. Or I
+          was thinking of using MIDI, so I am able to easily change the
+          instruments so they can decide, and then I can further refine it.
+          <br />
+          <br />
+          With this information I made a general timeline of when I want to have
+          things done, but the general timeline is as follows:
+          <br />
+          21st-24th = Fired Before Hired menu music clips, figure out all parts
+          of the song
+          <br />
+          25th-31st = Begin working on the animations (this is when both
+          animators are expecting to finish the final draft so we know the
+          timing of each scene), especially using the pod alongside Maria to get
+          our ideas down, start officially producing song
+          <br />
+          1st-7th = Finishing producing song, as well as mixing and mastering,
+          record and finish the sound bits for Fired Before Hired, continue to
+          work on animations as scenes gets finished
+          <br />
+          8th-14th = Figure out how to work sound in Unity, start working on the
+          level music for Fired Before Hired, continue to work on animations as
+          scenes gets finished
+          <br />
+          <br />
+          This is just the general plan for the next few weeks, I am very aware
+          that it is a lot per week, and other classes may take priortity in
+          certain weeks. This is just a general guideline of the best case
+          scenario and finishing early, which I know won't 100% happen. But
+          having a guide of what I want to do and pushing myself helps me to do
+          more work! Anyways I am definitely savouring my last week of being
+          away before all my assignments starts getting due soon....
+          <br />
+          <br />
+        </p>
+      </div>
+    </details>
+
     <!-- ------------------------------------ FUTURE WEEKS TEMPLATE ---------------------------------------------- -->
-    <!-- Copy this block and change the id/summary text for Weeks 4–12
-  <details class="week" id="week-4">
-    <summary>Week 4</summary>
+
+    <!-- <details class="week" id="week-4">
+    <summary>Week </summary>
     <div class="week-content">
       <h3>Reflection</h3>
       <p>...</p>
@@ -601,6 +906,6 @@
       <h3>Progress Report</h3>
       <p>...</p>
     </div>
-  </details>
-  --></body>
+  </details> -->
+  </body>
 </html>
